# datatable_column_error

./: README.md  bad_data.tsv  good_data.tsv  pyproject.toml  throws_ioerror.py  throws_valueerror.py  works.py
